Fix checkbox align

--- a/src/app/wizard/style.scss
+++ b/src/app/wizard/style.scss
@@ -41,7 +41,6 @@
   margin-bottom: 0;
   margin-top: 0;
   padding-top: 8px;
-  text-align: center;
   user-select: none;
 
   .km-wizard-step-number {
